feat: add approved file transfers
